[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "anta-zensical-extensions"
version = "0.0.0"
description = "Documentation-only Zensical extensions for ANTA."
requires-python = ">=3.10"
dependencies = [
  "markdown>=3.7",
  # This repo-local extension is always installed with the root doc dependency
  # group, which pins zensical.
  # "zensical>=0.0.50,<0.1",
]

[tool.setuptools.packages.find]
include = ["_extensions*"]
namespaces = false
